kubernetes/app-deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp
      version: blue
  template:
    metadata:
      app: bankapp
      version: blue
    spec:
      containers:
      - name:bankapp
        image: kaustavsdet/bankapp:blue
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
