kubernetes/bankapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: bankapp
    version: blue
